--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,51 +1,71 @@
 body {
-    color: #2F2F2F;
-    padding: 50px;
-    padding-right: 50px;
-    font-size: 90px;
-    font-family: serif;
-    background-color: white
+  color: #2F2F2F;
+  padding: 16px;
+  max-width: 1024px;
+  margin: 0 auto;
+  font-family: serif;
+  background-color: white
 }
 
 h1 {
-    size: 130%;
-    font-family: sans-serif;
-    border-bottom: 1px solid #888;
+  font-size: 3rem;
+  font-family: sans-serif;
+  border-bottom: 1px solid #888;
 }
 
 h2 {
-    size: 120%;
-    font-family: sans-serif;
-    border-bottom: 1px solid #888;
+  font-size: 2rem;
+  font-family: sans-serif;
+  border-bottom: 1px solid #888;
 }
 
 h3 {
-    size: 110%;
-    font-family: sans-serif;
+  font-size: 1.5rem;
+  font-family: sans-serif;
 }
 
 h4 {
-    size: 107%;
-    font-family: sans-serif;
-    border-bottom: 1px solid #888;
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  border-bottom: 1px solid #888;
 }
 
 h5 {
-    size: 105%;
-    font-family: sans-serif;
+  font-size: 1.3rem;
+  font-family: sans-serif;
 }
 
 h6 {
-    size: 102%;
+    font-size: 1.2rem;
     font-family: sans-serif;
 }
 
 a {
-    color: #39F;
-    text-decoration: none;
+  color: #39F;
+  text-decoration: none;
 }
 
 a:hover {
-    color: #00F;
-    text-decoration: underline;
+  color: #00F;
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+}
+
+/* https://blog.theodo.com/2018/01/responsive-iframes-css-trick/ */
+.iframe-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
