--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,11 @@
+:root {
+  font-size: 60px;
+}
+
 body {
   color: #2F2F2F;
   padding: 16px;
-  max-width: 1024px;
+  max-width: 1280px;
   margin: 0 auto;
   font-family: serif;
   background-color: white
@@ -36,8 +40,8 @@ h5 {
 }
 
 h6 {
-    font-size: 1.2rem;
-    font-family: sans-serif;
+  font-size: 1.2rem;
+  font-family: sans-serif;
 }
 
 a {
