--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,56 +1,67 @@
 :root {
-  font-size: 60px;
+  font-size: 30px;
 }
 
 body {
-  color: #2F2F2F;
+  color: #cacaca;
   padding: 16px;
   max-width: 1280px;
   margin: 0 auto;
-  font-family: serif;
-  background-color: white
+  font-family: 'Archivo', sans-serif;
+  background-color: #1722da
 }
 
 h1 {
   font-size: 3rem;
-  font-family: sans-serif;
-  border-bottom: 1px solid #888;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 h2 {
   font-size: 2rem;
-  font-family: sans-serif;
-  border-bottom: 1px solid #888;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 h3 {
   font-size: 1.5rem;
-  font-family: sans-serif;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 h4 {
   font-size: 1.4rem;
-  font-family: sans-serif;
-  border-bottom: 1px solid #888;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 h5 {
   font-size: 1.3rem;
-  font-family: sans-serif;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 h6 {
   font-size: 1.2rem;
-  font-family: sans-serif;
+  font-family: 'Tenor Sans', sans-serif;
+  /* border-bottom: 1px solid #888; */
+  text-transform: uppercase
 }
 
 a {
-  color: #39F;
-  text-decoration: none;
+  color: #5e10aa;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: #00F;
+  color: #5e10aa;
+  font-weight: bold;
   text-decoration: underline;
 }
 
