--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,12 +3,12 @@
 }
 
 body {
-  color: #cacaca;
+  color: #1722da;
   padding: 16px;
   max-width: 1280px;
   margin: 0 auto;
   font-family: 'Archivo', sans-serif;
-  background-color: #1722da
+  background-color: #cacaca
 }
 
 h1 {
@@ -54,13 +54,13 @@ h6 {
 }
 
 a {
-  color: #5e10aa;
+  color: #1722da;
   font-weight: bold;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #5e10aa;
+  color: #1722da;
   font-weight: bold;
   text-decoration: underline;
 }
