--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,9 @@ h1 {
   font-family: 'Tenor Sans', sans-serif;
   /* border-bottom: 1px solid #888; */
   text-transform: uppercase;
-  text-align: center
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h2 {
@@ -24,35 +26,44 @@ h2 {
   font-family: 'Tenor Sans', sans-serif;
   /* border-bottom: 1px solid #888; */
   text-transform: uppercase;
-  text-align: center
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h3 {
   font-size: 1.5rem;
   font-family: 'Tenor Sans', sans-serif;
   /* border-bottom: 1px solid #888; */
-  text-transform: uppercase
+  text-transform: uppercase;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h4 {
   font-size: 1.4rem;
   font-family: 'Tenor Sans', sans-serif;
   /* border-bottom: 1px solid #888; */
-  text-transform: uppercase
+  text-transform: uppercase;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h5 {
   font-size: 1.3rem;
   font-family: 'Tenor Sans', sans-serif;
-  /* border-bottom: 1px solid #888; */
-  text-transform: uppercase
+  /* border-bottom: 1px solid ;
+    margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h6 {
   font-size: 1.2rem;
   font-family: 'Tenor Sans', sans-serif;
   /* border-bottom: 1px solid #888; */
-  text-transform: uppercase
+  text-transform: uppercase;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 a {
