--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,8 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   font-family: 'Archivo', sans-serif;
-  background-color: #cacaca
+  background-color: #cacaca;
+  line-height: 2
 }
 
 h1 {
