Added padding for top pic

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -82,6 +82,7 @@ a:hover {
 
 img {
   max-width: 100%;
+  padding-top: 100px;
 }
 
 /* https://blog.theodo.com/2018/01/responsive-iframes-css-trick/ */
