--- a/src/css/main.css
+++ b/src/css/main.css
@@ -82,7 +82,8 @@ a:hover {
 
 img {
   max-width: 100%;
-  padding-top: 100px;
+  margin-top: 100px;
+  border: 3px solid #1722da;
 }
 
 /* https://blog.theodo.com/2018/01/responsive-iframes-css-trick/ */
