--- a/src/css/main.css
+++ b/src/css/main.css
@@ -54,8 +54,8 @@ h4 {
 h5 {
   font-size: 1.3rem;
   font-family: 'Tenor Sans', sans-serif;
-  /* border-bottom: 1px solid ;
-    margin-top: 100px;
+  /* border-bottom: 1px solid ;*/
+  margin-top: 100px;
   margin-bottom: 50px;
 }
 
